--- a/src/pages/index/index.module.scss
+++ b/src/pages/index/index.module.scss
@@ -68,7 +68,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                width: 30%;
+                // width: 30%;
                 margin-bottom: 12px;
                 .icon{
                     width: 56px;
@@ -160,7 +160,5 @@
                 }
         }
     }
-
-
 }
 
